src/test/ui/parser/bounds-lifetime.stderr
error: expected one of `>`, identifier, or lifetime, found `,`
  --> $DIR/bounds-lifetime.rs:11:14
   |
LL | type A = for<,> fn(); //~ ERROR expected one of `>`, identifier, or lifetime, found `,`
   |              ^ expected one of `>`, identifier, or lifetime here

error: aborting due to previous error

